tentativa de voltar versao

--- a/Api-Tcc/public/index.html
+++ b/Api-Tcc/public/index.html
@@ -227,7 +227,7 @@
 }</code></pre>
 
             <h3>Obter Próximo Paciente na Fila</h3>
-            <p><strong>Método</strong>: <code>GET</code></p>
+            <p><strong>Métodos</strong>: <code>GET</code></p>
             <p><strong>Endpoint</strong>: <code>/fila/atual/:status</code></p>
             <p><strong>Descrição</strong>: Obtém o próximo paciente na fila com base no status fornecido.</p>
             <p><strong>Resposta Sucesso</strong>:</p>
